fixed prime flipped logic, added different box colors for rounds, fixed row gaps issue, changed m logic and series a little bit

--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,7 @@
 #canvas {
 	display: block;
 }
+
+a {
+	background-color: #6d6d6d;
+}
